# AgenticOS

./: .env.example  .gitignore  CLAUDE.md  autoharness_example.py  cloudbuild.yaml  constitution.yaml  design.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.claude/skills/analytics-and-mrr-tracking/: SKILL.md
.claude/skills/claude-api-integration/: SKILL.md
.claude/skills/gcp-cloud-run-deploy/: SKILL.md
.claude/skills/google-adk-python-agents/: SKILL.md
.claude/skills/nextjs-saas-scaffold/: SKILL.md
.claude/skills/outbound-sales-toolkit/: SKILL.md
.claude/skills/postgres-saas-patterns/: SKILL.md
.claude/skills/saas-landing-page/: SKILL.md
.claude/skills/seo-content-engine/: SKILL.md
.claude/skills/stripe-billing-saas/: SKILL.md
agents/: Dockerfile  pyproject.toml
agents/app/: agent.py  auto_configure.py  main.py  models.py  session.py
agents/app/phases/: automation_triage.py  brain_dump.py  deliverable.py  domain_locking.py  skill_surfacing.py
agents/tests/: conftest.py  test_phases.py  test_routes.py  test_session.py
deployment/: provision.sh
design/agenticos-dev/: CLAUDE.md  seven-day-plan.md
design/agenticos-dev/shared/: gcp-provisioning-template.md  nepq-framework.md  stack-config.md  stripe-connect-config.md
infra/agenticos/: Makefile  main.tf  outputs.tf  provider.tf  variables.tf
web/: Dockerfile  package.json  prisma.config.ts  vitest.config.ts
web/prisma/: schema.prisma
web/src/: auth.config.ts  auth.ts  proxy.ts
web/src/app/: globals.css  (+4 more)
web/tests/: config.test.ts
(+128 files in other folders)
